Fix comment spacing

--- a/app/assets/stylesheets/startups.css
+++ b/app/assets/stylesheets/startups.css
@@ -38,6 +38,9 @@ h2#description{
   text-align: center;
   /*padding-left: 5vw;*/
 }
+#reviewComment{
+  line-height: normal;
+}
 h1{
   font-size: 10vh;
 }
